# termpaper4

./: README.md  REEADME.md  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_alter_message_options.py
mailing/templates/mailing/: base.html  home.html  log_list.html  message_confirm_delete.html  message_detail.html  message_form.html  messages_list.html  sending_confirm_delete.html  sending_detail.html  sending_form.html  sending_list.html  subscriber_confirm_delete.html  subscriber_detail.html  subscriber_form.html  subscribers_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_profile.py  0003_customuser_is_blocked.py  0004_customuser_is_verified_customuser_token_and_more.py  0005_alter_customuser_options.py
users/templates/users/: login.html  register.html  reset_confirm.html  reset_password.html  user_detail.html  user_form.html  user_list.html
