[project]
name = "termpaper4"
version = "0.1.0"
description = ""
authors = [
    {name = "timur",email = "timuryavashev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.1.0,<27.0.0)"
]

[tool.black]
# Максимальная длина строки
line-length = 119
exclude = '.git'

[tool.isort]
# максимальная длина строки
line_length = 119
